src/test/deca/context/valid/created/testsGeneraux/assignIdentifier.deca
// Description :
//    Test de l'affectation par un identifiant
//
// Résultats :
//    ok

{
    int x;
    int y = 2;
    x = y;
    println(y);
}
